# WEOMcpp

./: CMakeLists.txt  README.md  conan.cmake  conanfile.txt
core/: CMakeLists.txt
core/include/core/: device.h  execution.h  logging.h  prtutils.h  utils.h
core/include/core/connection/: addressrange.h  asiodatalinkwithbaudrateandstreamsource.h  datalinkuart.h  deviceutils.h  idatalinkinterface.h  idatalinkwithbaudrate.h  ideviceinterface.h  iebusplugin.h  iprotocolinterface.h  protocolinterfacetcsi.h  resultdeviceinfo.h  serialportinfo.h  stats.h  status.h  tcsipacket.h
core/include/core/misc/: buffereddatareader.h  conversions.h  deadlockdetectionmutex.h  elapsedtimer.h  futurewatcher.h  imagecolorization.h  imainthreadindicator.h  lifetimechecker.h  palette.h  progresscontroller.h  result.h  resultmacros.h  verify.h
core/include/core/properties/: itaskmanager.h  properties.h  properties.inl  propertyadapterbase.h  propertyadaptervalue.h  propertyadaptervaluecomponent.h  propertyadaptervaluederived.h  propertyadaptervaluederivedfrom1.h  propertyadaptervaluederivedfrom2.h  propertyadaptervaluederivedfrom3.h  propertyadaptervaluedevice.h  propertyadaptervaluedevicecomposite.h  propertyadaptervaluedeviceprogress.h  propertyadaptervaluedevicesimple.h  propertydependencyvalidator.h  propertydependencyvalidatorfor2.h  propertyid.h  propertyvalue.h  propertyvaluearithmetic.h  propertyvaluebase.h  propertyvalueconversion.h  propertyvalueenum.h  propertyvalues.h  rankedvalidationresult.h  taskmanagerdirect.h  taskmanagerqueued.h  transactionchanges.h  transactionsummary.h  valueadapterusbstringdescriptor.h
core/include/core/stream/: idatalinkwithbaudrateandstreamsource.h  imagedata.h  istream.h  istreamsource.h
core/source/: device.cpp  logging.cpp
core/source/connection/: addressrange.cpp  asiodatalinkwithbaudrateandstreamsource.cpp  datalinkuart.cpp  deviceutils.cpp  deviceutils.mm  ideviceinterface.cpp  protocolinterfacetcsi.cpp  stats.cpp  status.cpp  tcsipacket.cpp
core/source/misc/: buffereddatareader.cpp  conversions.cpp  deadlockdetectionmutex.cpp  elapsedtimer.cpp  imagecolorization.cpp  lifetimechecker.cpp  palette.cpp  progresscontroller.cpp  result.cpp
core/source/properties/: itaskmanager.cpp  properties.cpp  propertyadapterbase.cpp  propertydependencyvalidator.cpp  propertyid.cpp  propertyvaluebase.cpp  propertyvalues.cpp  rankedvalidationresult.cpp  taskmanagerdirect.cpp  taskmanagerqueued.cpp  transactionchanges.cpp  transactionsummary.cpp  valueadapterusbstringdescriptor.cpp  valueadapterusbstringdescriptordummy.cpp  valueadapterusbstringdescriptorunix.cpp  valueadapterusbstringdescriptorwin.cpp
diagrams/: communicationStack.puml  exampleSequence.puml  propertyDependencies.puml  propertySystem.puml  transactionClass.puml  transactionSequence.puml  triggers.puml
ebus-plugin/: CMakeLists.txt  datalinkebus.cpp  datalinkebus.h  ebusplugin.cpp  ebusplugin.h
example/: CMakeLists.txt  example.cpp  example.h
wtc640/: CMakeLists.txt
wtc640/include/core/wtc640/: deadpixels.h  deviceinterfacewtc640.h  devicewtc640.h  enumvaluedescription.h  firmwarewtc640.h  hungariandeadpixels.h  memoryspacewtc640.h  palettesmanager.h  propertieswtc640.h  propertyadapterlensrange.h  propertyidwtc640.h  videoformatadapter.h
wtc640/source/: deadpixels.cpp  deviceinterfacewtc640.cpp  devicewtc640.cpp  firmwarewtc640.cpp  fx3pluginmanager.cpp  hungariandeadpixels.cpp  memoryspacewtc640.cpp  palettesmanager.cpp  propertieswtc640.cpp  propertyadapterlensrange.cpp  propertyidwtc640.cpp  videoformatadapter.cpp
